# AgentShield-AI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt  tmp_safe_http_debug.jsonl
.github/: pull_request_template.md
contracts/: AuditRecord.json  Run.json  SafetyDecision.json  Step.json  ToolCall.json
docs/: adoption_recipes.md  architecture.md  architecture_visual.md  compatibility_matrix.md  contracts.md  copy_paste_integration_example.md  demo_quickstart.md  demo_scenarios.md  demo_value.md  deployment.md  developer_starter_pack.md  example_run.md  final_go_no_go.md  first_run_checklist.md  first_use_case.md  github_about_pack.md  handoff_pack.md  integration_flow_reference.md  integrations_pack_n.md  known_issues.md  langchain_integration.md  langgraph_integration.md  launch_checklist.md  mcp_adapter.md  migration_guide_v2.md  mvp_scope.md  notebooklm_master_source.md  notebooklm_source_pack.md  observability.md  open_source_release_pack_m2.md  open_source_scope.md  operations_runbook.md  policy_authoring.md  policy_pack_v2.md  presentation_outline.md  product_brief_en.md  product_brief_ru.md  product_shell_user_guide.md  product_user_flow.md  productization_pack_a.md  (+29 more)
examples/: example_run.py  reference_product_app.py
infra/: .env.example  Dockerfile  docker-compose.yml
scripts/: demo_smoke.py
src/: __init__.py
tests/: test_adoption_recipes_docs.py  test_api_app.py  test_api_audit_integrity_integration.py  test_api_service.py  (+61 more)
(+98 files in other folders)
